--- a/templates/index.html
+++ b/templates/index.html
@@ -73,10 +73,11 @@
         </section>
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
+            {% for nombre, contenido in tienda.items %}
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Nuestros productos para perros</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Nuestros productos para {{nombre.lower}}</h2>
+                    <h3 class="section-subheading text-muted">{{contenido.descripcion}}</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -94,184 +95,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/juguetes.jpg" alt="..."/>
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Juguetes</div>
-                                <div class="portfolio-caption-subheading text-muted">Entretención</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 3-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/accesorios.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Accesorios</div>
-                                <div class="portfolio-caption-subheading text-muted">Personalidad</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <!-- Portfolio item 4-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/ropa.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Ropa</div>
-                                <div class="portfolio-caption-subheading text-muted">Marcas</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <!-- Portfolio item 5-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/collares.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Collares</div>
-                                <div class="portfolio-caption-subheading text-muted">Diseños nuevos</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Portfolio item 6-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/platos.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Platos</div>
-                                <div class="portfolio-caption-subheading text-muted">Diferentes tipos</div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Nuestros productos para gatos</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 1-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/comidas.jgp.jpeg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Comidas</div>
-                                <div class="portfolio-caption-subheading text-muted">Para todas las edades</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/juguetes.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Juguetes</div>
-                                <div class="portfolio-caption-subheading text-muted">Entretención</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 3-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/accesorios.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Accesorios</div>
-                                <div class="portfolio-caption-subheading text-muted">Personalidad</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <!-- Portfolio item 4-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/ropa.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Ropa</div>
-                                <div class="portfolio-caption-subheading text-muted">Marcas</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <!-- Portfolio item 5-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/collares.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Collares</div>
-                                <div class="portfolio-caption-subheading text-muted">Diseños nuevos</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Portfolio item 6-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="static/assets/img/portfolio/platos.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Platos</div>
-                                <div class="portfolio-caption-subheading text-muted">Diferentes tipos</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            {% endfor %}
             </div>
         </section>
         <!-- About-->
@@ -493,101 +318,6 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong id="comida-1-price"></strong>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-check me-1"></i>
-                                        Añadir al carro
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-2">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h6 class="text-uppercase" id="comida-2">Comida dos</h6>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" id="comida-2-image" src="static/assets/img/portfolio/1.jpg" alt="..." />
-                                    <p id="comida-2-desc">Info aquí</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong id="comida-2-price"></strong>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-check me-1"></i>
-                                        Añadir al carro
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-2">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h6 class="text-uppercase" id="comida-3">Comida tres</h6>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" id="comida-3-image" src="static/assets/img/portfolio/1.jpg" alt="..." />
-                                    <p id="comida-3-desc">Info aquí</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong id="comida-3-price"></strong>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-check me-1"></i>
-                                        Añadir al carro
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-2">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h6 class="text-uppercase" id="comida-4">Comida cuatro</h6>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" id="comida-4-image" src="static/assets/img/portfolio/1.jpg" alt="..." />
-                                    <p id="comida-4-desc">Info aquí</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong id="comida-4-price"></strong>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-check me-1"></i>
-                                        Añadir al carro
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-2">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h6 class="text-uppercase" id="comida-5">Comida cinco</h6>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" id="comida-5-image" src="static/assets/img/portfolio/1.jpg" alt="..." />
-                                    <p id="comida-5-desc">Info aquí</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong id="comida-5-price"></strong>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-check me-1"></i>
-                                        Añadir al carro
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-2">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h6 class="text-uppercase" id="comida-6">Comida seis</h6>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" id="comida-6-image" src="static/assets/img/portfolio/1.jpg" alt="..." />
-                                    <p id="comida-6-desc">Info aquí</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong id="comida-6-price"></strong>
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
