--- a/templates/index.html
+++ b/templates/index.html
@@ -173,6 +173,26 @@
                 </ul>
             </div>
         </section>
+        <!-- Ofertas -->
+        <div class="ofertas-seccion">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">OFERTAS Y PROMOCIONES</h2>
+                    <h3 class="section-subheading text-muted">Conoce nuestras ofertas y promociones</h3>
+                </div>
+                <table id="tabla-ofertas" class="table table-hover table-sm table-responsive">
+                    <thead class="thead-light">
+                      <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Descripcion</th>
+                        <th scope="col">Vigencia</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
